--- a/style.css
+++ b/style.css
@@ -39,3 +39,39 @@ body {
 .sidebarOption.active{
     color: var(--twitter-color);
 }
+
+.sidebar_tweet{
+    width: 100;
+    background-color: var(--twitter-color);
+    border: none;
+    color: white;
+    font-weight: 900;
+    border-radius: 30px;
+    height: 50px;
+    margin-top: 20px;
+}
+
+body{
+    display: flex;
+    height: 100vh;
+    max-width: 1300px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 0 10px;
+
+}
+
+.sidebar{
+    border-right: 1px solid var(--twitter-background);
+    flex: 0.2;
+    min-width: 250px;
+    margin-top: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
+
+}
+
+.fa-twitter{
+    color: var(--twitter-color);
+    font-size: 30px;
+}
