--- a/sass/Dark.scss
+++ b/sass/Dark.scss
@@ -1,8 +1,15 @@
-$background-color: #282c34;
+/*$background-color: #282c34;
 $white-color: rgb(27, 225, 47);
-$link-color: #61dafb;
+$link-color: #61dafb; */
 
+// defining colors
+$onyx: #404040;
+$cultured: #f5f5f5;
 
-
+// defining themes
+html[data-theme="dark"] {
+    --color-text: #{$onyx};
+    --color-background: #{$cultured};
+}
 
 @import 'App'
