--- a/sass/Light.scss
+++ b/sass/Light.scss
@@ -1,7 +1,15 @@
-$background-color: #bbccee;
+/*$background-color: #bbccee;
 $white-color: rgb(80, 71, 71);
-$link-color: #09708d;
+$link-color: #09708d; */
 
+$onyx: #404040;
+$cultured: #f5f5f5;
+
+// defining themes
+html[data-theme="light"] {
+    --color-text: #{$onyx};
+    --color-background: #{$cultured};
+}
 
 
 
