--- a/sass/Dark.scss
+++ b/sass/Dark.scss
@@ -2,14 +2,14 @@
 $white-color: rgb(27, 225, 47);
 $link-color: #61dafb; */
 
-// defining colors
-$onyx: #404040;
-$cultured: #f5f5f5;
+.dark {
+    .text {
+        color: $white;
+    }
 
-// defining themes
-html[data-theme="dark"] {
-    --color-text: #{$onyx};
-    --color-background: #{$cultured};
+    .background {
+        background-color: $dark-700;
+    }
 }
 
 @import 'App'
