--- a/sass/Light.scss
+++ b/sass/Light.scss
@@ -2,14 +2,17 @@
 $white-color: rgb(80, 71, 71);
 $link-color: #09708d; */
 
-$onyx: #404040;
-$cultured: #f5f5f5;
-
-// defining themes
-html[data-theme="light"] {
-    --color-text: #{$onyx};
-    --color-background: #{$cultured};
+.light{
+    .text {
+        color: $dark-900;
+    }
+    
+    .background {
+        background-color: $dark-000;
+    }
 }
+
+
 
 
 
