added function to darkmode button

--- a/my-react-app/src/sass/Dark.scss
+++ b/my-react-app/src/sass/Dark.scss
@@ -1,15 +1,6 @@
-/*$background-color: #282c34;
+$background-color: #282c34;
 $white-color: rgb(27, 225, 47);
-$link-color: #61dafb; */
+$link-color: #61dafb; 
 
-.dark {
-    .text {
-        color: $white;
-    }
-
-    .background {
-        background-color: $dark-700;
-    }
-}
 
 @import 'App'
