--- a/my-react-app/src/sass/Light.scss
+++ b/my-react-app/src/sass/Light.scss
@@ -1,16 +1,8 @@
-/*$background-color: #bbccee;
+$background-color: #bbccee;
 $white-color: rgb(80, 71, 71);
-$link-color: #09708d; */
+$link-color: #09708d; 
 
-.light{
-    .text {
-        color: $dark-900;
-    }
-    
-    .background {
-        background-color: $dark-000;
-    }
-}
+
 
 
 
