--- a/public/style.css
+++ b/public/style.css
@@ -5,6 +5,8 @@
 } */
 
 body {
+    display: flex;
+    transition: 0.5s;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -235,4 +237,44 @@ body{
 .widgets_widgetContainer h2{
     font-size: 18px;
     font-weight: 800;
+}
+
+
+#toggle{
+    position: relative;
+    display: block;
+    top: 5px;
+    cursor: pointer;
+    width: 80px; 
+    height: 30px;
+    border-radius: 160px;
+    background: #222;
+    transition: 0.5s;
+    box-shadow: inset 0 8px 60px rgba(0,0,0,0.1), inset 0 8px 8px rgba(0,0,0,0.1), inset 0 -4px 4px rgba(0,0,0,0.1),
+}
+
+#toggle .indicator {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 40px;
+    height: 30px;
+    background: linear-gradient(to bottom, #444, #222);
+    border-radius: 50%;
+    transform: scale(0.9);
+    box-shadow: 0 8px 40px rgba(0,0,0,0.5), inset 0 4px 4px rgba(255,255,255,0.2), inset 0 -4px 4px rgba(255,255,255,0.2);
+    transition: 0.5s;
+}
+
+#toggle.active .indicator {
+    left: 40px;
+}
+
+body.active {
+    background: #222;
+}
+
+#toggle.active {
+    background: #fff;
+    box-shadow: inset 0 2px 60px rgba(0,0,0,0.1), inset 0 2px 8px rgba(0,0,0,0.1), inset 0 -4px 8px rgba(0,0,0,0.05),
 }
