--- a/public/style.css
+++ b/public/style.css
@@ -279,3 +279,9 @@ body.active {
     background: #fff;
     box-shadow: inset 0 2px 60px rgba(0,0,0,0.1), inset 0 2px 8px rgba(0,0,0,0.1), inset 0 -4px 8px rgba(0,0,0,0.05),
 }
+
+.navlink{
+    text-decoration: none;
+    font-size: 30px;
+    color:#50b7f5;
+}
